k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-fiber-fx
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 8080
  selector:
    app: fiber-fx
